--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,9 @@
 
-*{
-    
-    font-family: 'Pacifico', cursive;;
+.fondo {
+    background: url(/media/abstract_music_notes_background_1706.jpg) top no-repeat scroll ;
 }
 
-body {
-    background: url(/media/abstract_music_notes_background_1706.jpg) top no-repeat scroll ;
-    
-}
-.LogoSim{
+.LogoSim {
     text-align: center;
     max-width: 100%;
     margin: 20px;
@@ -18,17 +13,12 @@ body {
     padding-bottom: 20px;
 }
 
-a{
+a {
       text-decoration: none;
       color: black;
 }  
 .LogoSim h2{
     font-size: 0.8rem;
-}
-
-.MainMenu a {
-    display: inline;
-    margin: 14px;
 }
 
 .MainMenu {
@@ -37,8 +27,8 @@ a{
     grid-template-rows: auto auto;
     max-width: 90vw;
     margin:0 auto;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
 .containercard {
     width: 300px;
     height: 200px;
