--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,17 @@ a {
 }
 
 .MainMenu {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto;
-    max-width: 90vw;
-    margin:0 auto;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-transform: uppercase;
+    font-size: 25px;
+    background-color: #fafafa;
 }
+
+.Formu {
+    display: flex;
+    margin: 10px;
+    background-color:#fafafa;
+}
+
 .containercard {
     width: 300px;
     height: 200px;
