--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,90 +1,65 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
-.header__LogoSim, .header__LogoSim--intro {
+.header__LogoSim {
   text-align: center;
   max-width: 100%;
   margin: 20px;
   text-transform: uppercase;
   background-color: #fafafa;
   padding-top: 20px;
-  padding-bottom: 20px;
-}
-.header__LogoSim h2, .header__LogoSim--intro h2 {
-  font-size: 0.8rem;
-}
-
-.header__LogoSim--intro {
-  background-color: grey;
-}
-.header__LogoSim--intro h3 {
-  font-size: 1.3rem;
-}
+  padding-bottom: 20px; }
+  .header__LogoSim h2 {
+    font-size: 0.8rem; }
 
 .main__menu {
   text-transform: uppercase;
   font-size: 25px;
-  background-color: #fafafa;
-}
+  background-color: red; }
 
 .Formu {
   display: flex;
   margin: 10px;
-  background-color: #fafafa;
-}
+  background-color: #fafafa; }
 
 .containercard {
   width: 300px;
   height: 200px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #fafafa;
   display: flex;
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
-  transition: 0.2s;
-}
+  transition: 0.2s; }
 
 .containercard:hover {
   transform: scale(120%);
-  transition: 0.3s;
-}
+  transition: 0.3s; }
 
 .contact {
   display: flex;
   align-items: center;
-  justify-content: center;
-}
-.contact a {
-  background-color: #fafafa;
-  padding: 10px;
-  text-transform: uppercase;
-}
-
-.footer {
-  list-style: none;
-}
-.footer a {
-  text-decoration: none;
-}
+  justify-content: center; }
+  .contact a {
+    background-color: #fafafa;
+    padding: 10px;
+    text-transform: uppercase; }
 
 /* MIS MEDIAQUERIES */
 @media screen and (max-width: 1700px) {
   .main__menu {
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto;
-  }
-}
+    grid-template-rows: auto auto auto; } }
+
 /* tablet */
 @media screen and (max-width: 1100px) {
   .main__menu {
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
-}
+    align-items: center; } }
+
 /* phone horizontal */
-/* phone vertical *//*# sourceMappingURL=main.css.map */
+/* phone vertical */
