--- a/sass/main.css
+++ b/sass/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -15,10 +16,11 @@
 }
 .header__LogoSim h2, .header__LogoSim--intro h2 {
   font-size: 0.8rem;
+  text-decoration: underline;
 }
 
 .header__LogoSim--intro {
-  background-color: grey;
+  background-color: wheat;
 }
 .header__LogoSim--intro h3 {
   font-size: 1.3rem;
@@ -27,12 +29,6 @@
 .main__menu {
   text-transform: uppercase;
   font-size: 25px;
-  background-color: #fafafa;
-}
-
-.Formu {
-  display: flex;
-  margin: 10px;
   background-color: #fafafa;
 }
 
@@ -64,10 +60,124 @@
   text-transform: uppercase;
 }
 
+body {
+  height: 100%;
+  font-family: "Noto Sans", sans-serif;
+  background-image: url(../media/pexels-pixabay-220067.jpg);
+}
+
+.contact_form {
+  width: 460px;
+  height: auto;
+  margin: 80px auto;
+  border-radius: 10px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  background-color: #fbfbfb;
+  padding-left: 30px;
+}
+
+input {
+  background-color: #fbfbfb;
+  width: 408px;
+  height: 40px;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: darkslateblue;
+  margin-top: 10px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+
+textarea {
+  background-color: #fbfbfb;
+  width: 405px;
+  height: 150px;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: darkslateblue;
+  margin-top: 10px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+  padding-top: 15px;
+}
+
+label {
+  display: block;
+  float: center;
+}
+
+button {
+  height: 45px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  text-transform: uppercase;
+  background-color: darkslateblue;
+  border-color: darkslateblue;
+  border-style: solid;
+  border-radius: 10px;
+  width: 420px;
+  cursor: pointer;
+}
+
+button p {
+  color: #fff;
+}
+
+span {
+  color: darkslateblue;
+}
+
+.aviso {
+  font-size: 13px;
+  color: #0e0e0e;
+}
+
+h1 {
+  font-size: 39px;
+  text-align: letf;
+  padding-bottom: 20px;
+  color: darkslateblue;
+}
+
+h3 {
+  font-size: 16px;
+  padding-bottom: 30px;
+  color: #0e0e0e;
+}
+
+p {
+  font-size: 14px;
+  color: #0e0e0e;
+}
+
+::-webkit-input-placeholder {
+  color: #a8a8a8;
+}
+
+::-webkit-textarea-placeholder {
+  color: #a8a8a8;
+}
+
+.formulario input:focus {
+  outline: 0;
+  border: 1px solid #97d848;
+}
+
+.formulario textarea:focus {
+  outline: 0;
+  border: 1px solid #97d848;
+}
+
 .footer {
   list-style: none;
 }
-.footer a {
+
+a {
   text-decoration: none;
 }
 
