--- a/sass/main.css
+++ b/sass/main.css
@@ -8,11 +8,13 @@
 .header__LogoSim, .header__LogoSim--intro {
   text-align: center;
   max-width: 100%;
-  margin: 20px;
+  margin: 40px;
   text-transform: uppercase;
   background-color: #fafafa;
   padding-top: 20px;
   padding-bottom: 20px;
+  margin-left: 35%;
+  margin-right: 35%;
 }
 .header__LogoSim h2, .header__LogoSim--intro h2 {
   font-size: 0.8rem;
@@ -21,6 +23,8 @@
 
 .header__LogoSim--intro {
   background-color: wheat;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 .header__LogoSim--intro h3 {
   font-size: 1.3rem;
